log
Thu 16 May 2024 04:36:35 AM UTC: 
 tests:  0|5
total_score: 0/70
bc335f7
Thu 16 May 2024 08:07:30 PM UTC: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:77:20: error: ‘n’ undeclared (first use in this function)
   77 |       if (is_final(n)){
      |                    ^
sudoku.c:77:20: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:75:13: error: unused variable ‘aux’ [-Werror=unused-variable]
   75 |       Node* aux = top(pila);
      |             ^~~
cc1: all warnings being treated as errors
Compilation failed
a9e3a1d
Thu 16 May 2024 08:08:04 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
8605c4a
Thu 16 May 2024 08:40:17 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
test.c: In function ‘test_dfs’:
test.c:206:19: error: implicit declaration of function ‘DFS’ [-Werror=implicit-function-declaration]
  206 |     Node* final = DFS(initial, &cont);
      |                   ^~~
test.c:206:19: error: initialization of ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
test.c:230:11: error: assignment to ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  230 |     final = DFS(initial, &cont);
      |           ^
cc1: all warnings being treated as errors
Compilation failed
6a2f24d
